# Operative-System-Project

./: .gitignore  README.md
kernel_complete/: CMakeLists.txt  DEMO_COMPLETO.txt  compile.sh
kernel_complete/include/: memory.hpp  process.hpp  scheduler.hpp  sync.hpp  utils.hpp
kernel_complete/src/: main.cpp  memory.cpp  process.cpp  scheduler.cpp  sync.cpp
